# Change Log
# All notable changes to this project will be documented in this file.
# This project adheres to [Semantic Versioning](http://semver.org/).
# includes Added / Changed / Fixed

## [0.5.0] UNRELEASED

## [0.4.1] 2020-11-12
### Changed
- Removed `NextBase` replaced by `db.Model`

## [0.4.0] 2020-11-11
### Added
- Added `NextBase` enhanced declarative base

## [0.3.0] 2020-11-02
### Added
-- Added gRPC service unit test base class
### Fixed
- Fixed MAXIMUM_RETRY_ON_DEADLOCK not defined issue

## [0.2.1] 2020-10-23
### Added
- Added SQLAlchemy declarative Base

## [0.2.0] 2020-10-23
### Added
- Added code formatter `yapf`.
- Added sqla-wrapper
- Migrated db layer to core
- Added gRPC service mixin to close database connection

## [0.1.0] 2020-10-13
### Added
- Added gRPC / FastAPI stack requirements