@@ -3,19 +3,14 @@ from functools import wraps
 
 from sqla_wrapper import SQLAlchemy
 from sqlalchemy.exc import OperationalError
+from .models import get_base_model
 
 # from core.config import settings
 
 error_logger = logging.getLogger('error')
 
-# engine = create_engine(settings.SQLALCHEMY_DATABASE_URI, pool_pre_ping=True)
-#
-# session_factory = sessionmaker(bind=engine)
-# SessionLocal = scoped_session(session_factory)
 
-# db = SQLAlchemy(settings.SQLALCHEMY_DATABASE_URI)
-
-
+# noinspection PyPep8Naming
 class DB:
     def __init__(self):
         self._session = None
@@ -24,12 +19,16 @@ class DB:
         self._session = SQLAlchemy(database_uri)
 
     def __getattribute__(self, attr, *args, **kwargs):
-
         try:
             return super().__getattribute__(attr)
         except AttributeError:
             if not self._session:
                 raise Exception('Database session not initialized')
+
+            # BaseModel
+            if attr == 'BaseModel':
+                return get_base_model(self)
+
             return getattr(self._session, attr)
 
 
